argocd-applications/apps/echo-app/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-app
  labels:
    app: echo-app
spec:
  ingressClassName: nginx
  rules:
    - host: "echo.ganba.local"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-app
                port:
                  number: 80
